<resources>
    <string name="app_name">Standu</string>
    <string name="standu">STANDU</string>
    <string name="standu_decs">Aplikasi edukasi stunting untuk \npara Bunda</string>
    <string name="google_map_key">AIzaSyA-tHF-zfOXj9A5CPi22mV5f_dirrq8dUM</string>

    //image decs
    <string name="background_welcome">background_welcome</string>
    <string name="logo_putih">logo_putih</string>
    <string name="logo_pink">logo_pink</string>

    //halaman welcome
    <string name="selamat_datang">SELAMAT DATANG!</string>

    //halaman masuk dan daftar
    <string name="form_daftar_text">Formulir Pendaftaran</string>
    <string name="masuk_text">Selamat Datang \nBunda!</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="pertanyaan_daftar">Belum memiliki akun? </string>
    <string name="daftar">Daftar</string>
    <string name="pertanyaan_masuk">Sudah memiliki akun? </string>
    <string name="masuk">Masuk</string>


    //button
    <string name="button_daftar">Daftar</string>
    <string name="button_masuk">Masuk</string>
    <string name="button_sudah">Sudah</string>
    <string name="button_belum">Belum</string>
    <string name="button_lihat">Lihat</string>
    <string name="button_lihat_maps">Lihat Puskesmas/RS</string>
    <string name="button_ubah">Ubah</string>
    <string name="button_keluar">Keluar</string>
    <string name="button_back">Back</string>
    <string name="button_tambah">Tambah</string>
    <string name="button_simpan">Simpan</string>
    <string name="button_edit">Edit</string>
    <string name="button_hapus">Hapus</string>

    //menu
    <string name="menu1_diaryku">menu1 : diaryku</string>
    <string name="menu2_informasi_stunting">menu2 : informasi stunting</string>
    <string name="menu3_nutrisi_anak">menu3 : nutrisi anak</string>
    <string name="menu4_imunisasi_anak">menu4 : imunisasi anak</string>
    <string name="menu5_pengaturan_akun">menu5 : pengaturan akun</string>

    //diaryku
    <string name="judul_diary">DIARYKU</string>
    <string name="judul_diary_tambah">TAMBAH DIARYKU</string>
    <string name="judul_diary_detail">DETAIL DIARYKU</string>
    <string name="tanggal">Tanggal</string>
    <string name="up_tanggal">Masukkan tanggal</string>
    <string name="judul">Judul</string>
    <string name="up_judul">Masukkan judul</string>
    <string name="catatan">Catatan</string>
    <string name="up_catatan">Masukkan catatan</string>

    //imunisasi
    <string name="judul_imunisasi">IMUNISASI ANAK</string>
    <string name="judul_imunisasi_tambah">TAMBAH DATA ANAK</string>
    <string name="judul_imunisasi_edit">EDIT DATA ANAK</string>
    <string name="data_anak">Data Anak</string>
    <string name="nama_anak">Nama Anak</string>
    <string name="up_nama_anak">Masukkan nama anak</string>
    <string name="umur_anak">Umur Anak</string>
    <string name="up_umur_anak">Masukkan umur anak</string>
    <string name="jk_anak">Jenis Kelamin Anak</string>
    <string name="up_jk_anak">Pilih jenis kelamin anak</string>
    <string name="bb_anak">Berat Badan Anak</string>
    <string name="up_bb_anak">Masukkan berat badan anak</string>
    <string name="tb_anak">Tinggi Badan Anak</string>
    <string name="up_tb_anak">Masukkan tinggi badan anak</string>
    <string name="judul_imunisasi_detail">DETAIL DATA ANAK</string>
    <string name="ajakan_imunisasi">Mau pergi imunisasi?</string>
    <string name="link_map">Klik Untuk Lihat Puskesmas/RS Terdekat</string>
    <string name="history_imunisasi">History Imunisasi</string>
    <string name="imunisasi_maps_cari">Cari</string>
    <string name="nama_imunisasi">Nama Imunisasi</string>
    <string name="button_update_status">Update Status</string>
    <string name="usia_ideal">Usia Ideal</string>
    <string name="status">Status</string>
    <string name="button_tambah_history">Tambah History</string>
    <string name="judul_tambah_history_imunisasi">TAMBAH HISTORY IMUNISASI</string>
    <string name="up_nama_imunisasi">Masukkan nama imunisasi</string>


    <string name="judul_edit_diaryku">EDIT DIARYKU</string>
    <string name="selengkapnya">selengkapnya</string>
    <string name="atau">Atau</string>
    <string name="ubah_password">Ubah Password?</string>
    <string name="judul_ubah_password">UBAH PASSWORD</string>
    <string name="up_password_lama">Masukkan password lama</string>
    <string name="up_password_baru">Masukkan password baru</string>
    <string name="ubah">Ubah</string>
    <string name="judul_sharing_stunting">SHARING STUNTING</string>
    <string name="button_buka_sharingku">Buka Sharingku</string>
    <string name="judul_sharingku">SHARINGKU</string>
    <string name="judul_tambah_sharingku">TAMBAH SHARINGKU</string>
    <string name="judul_sharing">Judul Sharing</string>
    <string name="up_judul_sharing">Masukkan judul sharing</string>
    <string name="pengalaman_sharing">Pengalaman/Sharing</string>
    <string name="up_pengalaman_sharing">Masukkan cerita Anda</string>
    <string name="upload_gambar">Upload gambar</string>
    <string name="judul_nutrisi">NUTRISI ANAK</string>
    <string name="nutrisi_name">Nutrisi Name</string>
    <string name="nutrisi_description">Description</string>
    <string name="nama_nutrisi">Nama Nutrisi</string>
    <string name="detail_nutrisi">Detail Nutrisi</string>
    <string name="kandungan_vitamin">Kandungan Vitamin</string>
    <string name="resep_mpasi">Resep MPASI</string>
    <string name="sharing_judul">Judul Sharing</string>
    <string name="judul_detail_sharing">DETAIL SHARING</string>
    <string name="cerita_sharing">Cerita Sharing</string>
    <string name="edit_sharingku">EDIT SHARINGKU</string>
    <string name="bahan_mpasi">Bahan MPASI</string>
    <string name="bahan">Bahan</string>
    <string name="cara_membuat">Cara Membuat</string>

</resources>