<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Diaryku_tambah">

    <TableRow
        android:id="@+id/diaryku"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/pale_green"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:fontFamily="@font/poppins_extrabold"
            android:gravity="center"
            android:text="@string/judul_diary_tambah"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </TableRow>

    <ImageButton
        android:id="@+id/button_back_green"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_height="48dp"
        android:backgroundTint="#FBFBFB"
        android:contentDescription="@string/button_back"
        android:src="@drawable/back_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diaryku" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_back_green">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_extrabold"
            android:text="@string/tanggal"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/tambah_tanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:fontFamily="@font/poppins"
            android:hint="@string/up_tanggal"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_extrabold"
            android:text="@string/judul"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/tambah_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/up_judul"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_extrabold"
            android:text="@string/catatan"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/tambah_catatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/up_catatan"
            android:inputType="textMultiLine"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_simpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/button_simpan"
        android:backgroundTint="@color/pale_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>