<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImunisasiAnak_tambah">

    <TableRow
        android:id="@+id/imunisasi"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/light_pink"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:fontFamily="@font/poppins_extrabold"
            android:gravity="center"
            android:text="@string/judul_tambah_history_imunisasi"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </TableRow>

    <ImageButton
        android:id="@+id/button_back_pink"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FBFBFB"
        android:contentDescription="@string/button_back"
        android:src="@drawable/back_pink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imunisasi" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_back_pink">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_extrabold"
            android:text="@string/nama_imunisasi"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/tambah_namaImunisasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/up_nama_imunisasi"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_extrabold"
            android:text="@string/tanggal"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/tambah_tanggalImunisasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:fontFamily="@font/poppins"
            android:hint="@string/up_tanggal"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_simpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/button_simpan"
        android:backgroundTint="@color/light_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>