<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Imunisasi_detail">

    <TableRow
        android:id="@+id/sharingku"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/light_pink"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:fontFamily="@font/poppins_extrabold"
            android:gravity="center"
            android:text="@string/judul_imunisasi_detail"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </TableRow>

    <ImageButton
        android:id="@+id/button_back_pink"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FBFBFB"
        android:contentDescription="@string/button_back"
        android:src="@drawable/back_pink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sharingku" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_back_pink">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_extrabold"
            android:text="@string/data_anak"
            android:textAlignment="center"
            android:textColor="@color/dark_pink"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/lihat_namaAnak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_extrabold"
            android:hint="@string/nama_anak"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lihat_umurAnak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/umur_anak"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lihat_jkAnak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/jk_anak"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lihat_bbAnak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/bb_anak"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lihat_tbAnak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/tb_anak"
            android:textAlignment="center"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_edit"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:backgroundTint="@color/light_pink"
                    android:fontFamily="@font/poppins_extrabold"
                    android:text="@string/button_edit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_hapus"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:backgroundTint="@color/red"
                    android:fontFamily="@font/poppins_extrabold"
                    android:text="@string/button_hapus"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/history_imunisasi"
        android:textAlignment="center"
        android:textColor="@color/dark_pink"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <Button
        android:id="@+id/button_tambah_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/light_pink"
        android:text="@string/button_tambah_history"
        android:fontFamily="@font/poppins_extrabold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_imunisasi_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_tambah_history" />

</androidx.constraintlayout.widget.ConstraintLayout>